--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-, "src/app/layout.js", "src/app/users/route.ts"  ],
+, "src/app/layout.js", "src/app/Tests/users/route.ts"  ],
   "exclude": [
     "node_modules"
   ]
